Fix button layout issue in scroll animation

--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -62,3 +62,6 @@ html {
     left: 50%;
     transform: translateX(-50%);
 }
+.scroll-button{
+    all: unset;
+}
